sgopal-1: TACCSTER21: Add Posters

--- a/web-content/root/taccster-2021/poster-presentations--content.html
+++ b/web-content/root/taccster-2021/poster-presentations--content.html
@@ -93,8 +93,556 @@
 			<p class="taccster-h3">
 				Poster Presentations</p>
 			<hr class="no-top" style="margin-bottom: 25px;" />
+            <table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>1</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								An End-to-End Framework for Informing Hurricane Resilience Investments in Critical Infrastructure</h5>
+							<p>
+								<b>Brent Austgen*, Ashutosh Shukla, Dr. Erhan Kutanoglu, Dr. John Hasenbein</b><br />The University of Texas at Austin</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>2</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Varying Receptive Fields for Thermal Image Super-Resolution</h5>
+							<p>
+								<b>William J. Beksi*, Nolan B. Gutierrez</b><br />University of Texas at Arlington</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>3</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Reinforcement Learning for Quantum Systems</h5>
+							<p>
+								<b>Ariel R. Barr*, Willem Gispen</b>
+								<br>1. Massachusetts Institute of Technology
+								<br>2. University of Cambridge</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>4</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Numerical simulations against Experimental data: a comparison of atmospheric flow over real terrain topography</h5>
+							<p>
+								<b>Federico Bernardoni*, Umberto Ciri and Stefano Leonardi</b><br />University of Texas at Dallas, Richardson</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>5</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Flow Stabilization in a 3D Channel flow</h5>
+							<p>
+								<b>Andras Balogh* and Camille Vasquez</b><br />The University of Texas Rio Grande Valley</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>6</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Exploring the role of interfacial cation in F ion channel using MD simulation: Application of computational chemistry</h5>
+							<p>
+								<b>Aru Chezhian*, Zabin Momin, Hedieh Torabifard</b><br />University of Texas at Dallas</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>7</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Quantum Mechanical Studies of Topiroxostat Analogs for XO inhibition</h5>
+							<p>
+								<b>Chao Dong*, Samantha James</b><br />Department of Chemistry, University of Texas of Permian Basin, Odessa</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>8</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Characterization of large social information networks using high performance computing</h5>
+							<p>
+								<b>Hassan Dashtian*, Dhiraj Murthy</b><br />University of Texas at Austin</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>9</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Mutational analysis of SLC25A51 residues important for NAD+ binding and transport</h5>
+							<p>
+								<b>Shivansh Goyal*, Jared M. Eller, Lulu Cambronne</b><br />University of Texas at Austin</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>10</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Revisit the quantum 3 body problem</h5>
+							<p>
+								<b>Jonathan Jerke*, Bill Poirier</b><br />Texas Tech University</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>11</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Examining the Biochemical Activity of Anti-CRIPSR Protein, AcrIIA7</h5>
+							<p>
+								<b>Negar Koupaei*, Soo Hyun Yang</b><br />The University of Texas at Austin</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>12</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								A large-scale 3D micromechanical computational myocardium model</h5>
+							<p>
+								<b>David S. Li<sup>1</sup>*, Emilio A. Mendiola<sup>1</sup>, Reza Avazmohammadi<sup>2</sup>, Frank B. Sachse<sup>3</sup>, and Michael S. Sacks<sup>1</sup></b>
+								<br>1. The University of Texas at Austin
+								<br>2. Texas A&amp;M University
+								<br>3. The University of Utah</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>13</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Simulating Potential Impacts ofDredging on Local Fish Populations</h5>
+							<p>
+								<b>Mark Loveland*, Eirik Valseth, Clint Dawson, Edward Buskey</b><br />The University of Texas at Austin</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>14</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Animation development and student projects at TACC Visualization Center</h5>
+							<p>
+								<b>Yuliya Lanina*</b><br />The University of Texas at Austin</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>15</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Unraveling The Profound Iso-structural &amp; -Electronic Relations of Pd145(CO)60 to Au144(CN)60 NanoClusters</h5>
+							<p>
+								<b>X. López-Lozano<sup>1</sup>*, C. Crystal<sup>1</sup>, J. Johnson<sup>1</sup>, S.-M. Mullins<sup>1</sup>, H.-Ch. Weissker<sup>2</sup>, R. L. Whetten<sup>3</sup></b>
+								<br>1. University of Texas San Antonio
+								<br>2. Aix Marseille University, France
+								<br>3. Northern Arizona University</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>16</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Data-driven data-fitting: Adaptive spline fitting and its applications</h5>
+							<p>
+								<b>Soumya D. Mohanty*, Thomas Cruz, M. A. T. Chowdhury</b><br />The University of Texas Rio Grande Valley</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>17</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								The taxonomic ecology and functional potential of the urobiome is shaped by recurrent urinary tract infection and estrogen in postmenopausal women.</h5>
+							<p>
+								<b>Michael L. Neugent*, Ashwani Kumar, Neha V. Hulyalkar, Cong Zhang, Vivian H. Nguyen, Kevin C. Lutz, Jorge Fuentes, Amber Nguyen, Belle M. Sharon, Amy Kuprasertkul, Amanda P. Arute, Qiwei Li, Chao Xing, Vladimir Shulaev, Philippe E. Zimmern, Kelli L. Palmer, Nicole J. De Nisco</b>
+								<br>1. University of Texas at Dallas
+								<br>2. University of Texas Southwestern Medical Center
+								<br>3. University of Texas at Dallas, Richardson
+								<br>4. University of North Texas</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>18</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Numerical Simulation of Hydrodynamic Forces on Bridges Subjected to High-Velocity Flows</h5>
+							<p>
+								<b>Fahad Pervaiz* and Michelle Hummel</b><br />Univ. of Texas at Arlington, Arlington, TX</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>19</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Incorporating model selection to predict patient-specific response to neoadjuvant therapy using quantitative magnetic resonance imaging: Preliminary Results</h5>
+							<p>
+								<b>Caleb M. Phillips*, Ernesto A. B. F. Lima Chengyue Wu, Angela M. Jarrett, Zijian Zhou, Nabil Elshafeey, Jingfei Ma, Gaiane M. Rauch, Thomas E. Yankeelov</b>
+								<br>1. Oden Institute for Computational Engineering and Sciences
+								<br>2. Texas Advanced Computing Center
+								<br>3. Livestrong Cancer Institutes
+								<br>4. The University of Texas at Austin
+								<br>5. The University of Texas MD Anderson Cancer Center</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>20</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								CFD Multiphase Flow Modeling Inside Structured Packings</h5>
+							<p>
+								<b>Mikey T. Phan*, Luke H. Macfarlan, and R. Bruce Eldridge</b><br />The University of Texas at Austin</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>21</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								DFT investigation of para-substitution effects on the C—C bond activation of benzonitrile by a zerovalent nickel complex</h5>
+							<p>
+								<b>Juliana Rodrigue<sup>1</sup>*, Julissa Rodriguez<sup>1</sup>, Abdurrahman C. Atesin<sup>1</sup>, William D. Jones<sup>2</sup>, Tülay A. Ateşin<sup>1</sup></b>
+								<br>1. University of Texas Rio Grande Valley, Department of Chemistry
+								<br>2. University of Rochester, Department of Chemistry</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>22</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								From Cancer Sequencing Data to Neoantigen Prediction: A reusable pipeline using Snakemake</h5>
+							<p>
+								<b>Jensen Richardson*, Jafrin Pritha, Wenxuan Jiang, Rohit Prasad, Dhivya Arasappan, Jeanne Kowalski-Muegge</b><br />University of Texas at Austin</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>23</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								ParaMonte: An Efficient Serial&#x2F;Parallel MCMC Library</h5>
+							<p>
+								<b>Parvat Sapkota*, Joshua A. Osborne, Shashank Kumbhare, Fatemeh Bagheri and Amir Shahmoradi</b><br />The University of Texas, Arlington</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>24</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								User-Friendly Drug Discovery Web Applications on the Texas Advanced Computing Center</h5>
+							<p>
+								<b>Jason Sanche<sup>1</sup>*, Md Hassan<sup>2</sup>, Hernan Garcia<sup>2</sup>, Jesus Garcia<sup>2</sup>, Manuel Aguilar<sup>2</sup>, William J.Allen<sup>3</sup>, Yuanfei Sun<sup>4</sup>, Yang Shen<sup>4</sup>, Suman Sirimulla<sup>5</sup>, and Stanley Watowich<sup>6</sup></b>
+								<br>1. Department of Computational Sciences, The University of Texas at El Paso
+								<br>2. Department of Computer Science, The University of Texas at El Paso
+								<br>3. The University of Texas at Austin
+								<br>4. Texas A&amp;M University
+								<br>5. Department of Pharmaceutical Sciences, The University of Texas at El Paso
+								<br>6. The University of Texas Medical Branch at Galveston</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>25</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Substitutional Effects of Ni and Zn on Thermoelectric Properties of Cobalt Spinels: A first Principle Approach</h5>
+							<p>
+								<b>Arashi Shimizu*, Davisin Lopez, Nolan Hines, Terence Musho, Anveeksh Koneru</b><br />Undergraduate mechanical engineering UTPB</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>26</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Targeting the Undruggable: A Structure Guided Approach to Targeting KRAS</h5>
+							<p>
+								<b>Rim Touhami*, Srivathsan Ranganathan</b><br />Oregon Health and Science University</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>27</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Prediction of Ligand Activity at Subcellular Location</h5>
+							<p>
+								<b>Manikya Varshney*, Srijan Verma, Govinda K.C., Giovanni Bocci, Tudor I Oprea, and Suman Sirimulla</b>
+								<br>1. The University of Texas at El Paso
+								<br>2. BITS Pilani, India
+								<br>3. University of New Mexico Health Sciences Center</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>28</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								The role of RCAN1 in Down syndrome hippocampus via RNA-Seq analysis in Dp16 mice</h5>
+							<p>
+								<b>Sebastian Velez*<sup>6</sup>, Helen Wong<sup>1,2</sup>, Mina Griffioen<sup>2</sup>, Josien Levenga<sup>1,3</sup>, Carolyn Ardizzone<sup>2</sup>, Radu Moldovan<sup>4</sup> and Charles A. Hoeffer<sup>1,2,3</sup>, Robin Dowell<sup>5</sup>, Sebastian Velez<sup>6</sup>, Mary Allen<sup>5</sup></b>
+								<br>1. Institute for Behavioral Genetics, University of Colorado, Boulder
+								<br>2. Department of Integrative Physiology, University of Colorado, Boulder
+								<br>3. Linda Crnic Institute, Denver, Colorado
+								<br>4. Department of Pharmacology, University of Colorado, Anschutz Medical Campus, Denver
+								<br>5. Department of Molecular, Cellular, and Developmental Biology, University of Colorado, Boulder
+								<br>6. Department of Electrical and Computer Engineering, University of Texas, San Antonio</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>29</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Contrasting static and contextualised embeddings in the use of semantic featurevectors in neurophysiological prediction</h5>
+							<p>
+								<b>Lokesh Pugalenthib*, Heather Diala*, Nike Gnanatejac, Rachel Tessmerd, Maya Henryd, Jessy Lib</b>
+								<br>1. University of Houston
+								<br>2. Department of Linguistics, College of Liberal Arts and Social Sciences, University of Texas at Austin
+								<br>3. University of Pittsburgh
+								<br>4. Speech Language and Hearing Sciences, Moody College of Communication, University of Texas at Austin</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
+			<table width="100%">
+				<tbody>
+					<tr>
+						<td valign="top" width="10%">
+							<p style="font-size: 25px;">
+								<b>30</b></p>
+						</td>
+						<td>
+							<h5 style="margin-top: 7px;">
+								Structural Variant Detection Tools Struggle with Whole Exome Sequencing (WES) Data</h5>
+							<p>
+								<b>Lokesh Pugalenthi*, Rahul Nanduri*</b><br />Livestrong Cancer Institute, Dell Medical School, University of Texas at Austin</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr />
 			<p>
-				<b>Coming soon.</b></p>
+				<i>*Poster Presentation Speaker</i></p>
 		</div>
 		<div class="col-md-3">
 			<p class="taccster-h3">
