RT-20400: Minor: Swap TACCSTER21 presenter oder

--- a/web-content/root/taccster-2021/poster-presentations--content.html
+++ b/web-content/root/taccster-2021/poster-presentations--content.html
@@ -93,7 +93,7 @@
 			<p class="taccster-h3">
 				Poster Presentations</p>
 			<hr class="no-top" style="margin-bottom: 25px;" />
-            <table width="100%">
+			<table width="100%">
 				<tbody>
 					<tr>
 						<td valign="top" width="10%">
@@ -121,7 +121,7 @@
 							<h5 style="margin-top: 7px;">
 								Varying Receptive Fields for Thermal Image Super-Resolution</h5>
 							<p>
-								<b>William J. Beksi*, Nolan B. Gutierrez</b><br />University of Texas at Arlington</p>
+								<b>Nolan B. Gutierrez*, William J. Beksi</b><br />University of Texas at Arlington</p>
 						</td>
 					</tr>
 				</tbody>
