--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -877,19 +877,11 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/andrew-magill">Magill, Andrew</a></td>
-			<td>
-				<a href="mailto:amagill@tacc.utexas.edu">amagill@tacc.utexas.edu</a></td>
-			<td>
-				<a name="M"></a> Web &amp; Mobile Applications</td>
-		</tr>
-		<tr>
-			<td>
 				<a href="/web/website/about/directory/nicole-martin">Martin, Nicole</a></td>
 			<td>
 				<a href="mailto:ndmartin@tacc.utexas.edu">ndmartin@tacc.utexas.edu</a></td>
 			<td>
-				Expanding Pathways in Computing</td>
+				<a name="M"></a> Expanding Pathways in Computing</td>
 		</tr>
 		<tr>
 			<td>
