RT-19698: Delete Steve Terry

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -1285,19 +1285,11 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/steve-terry" t3url="1432">Terry, Steve</a></td>
-			<td>
-				<a href="mailto:sterry@tacc.utexas.edu">sterry@tacc.utexas.edu</a></td>
-			<td>
-				<a name="T"></a> Web &amp; Cloud Services</td>
-		</tr>
-		<tr>
-			<td>
 				<a href="/web/website/about/directory/sal-tijerina">Tijerina, Sal</a></td>
 			<td>
 				<a href="mailto:stijerina@tacc.utexas.edu">stijerina@tacc.utexas.edu</a></td>
 			<td>
-				Web &amp; Mobile Applications</td>
+				<a name="T"></a> Web &amp; Mobile Applications</td>
 		</tr>
 		<tr>
 			<td>
