RT-20035: Scalable Computational Intelligence

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -481,7 +481,7 @@
 			<td>
 				<a href="mailto:ngaffney@tacc.utexas.edu">ngaffney@tacc.utexas.edu</a></td>
 			<td>
-				<a name="G"></a> Data Intensive Computing: Data Management &amp; Collections, Data Mining &amp; Statistics</td>
+				<a name="G"></a> Data Intensive Computing: Data Management &amp; Collections, Scalable Computational Intelligence</td>
 		</tr>
 		<tr>
 			<td>
@@ -609,7 +609,7 @@
 			<td>
 				<a href="mailto:agupta@tacc.utexas.edu">agupta@tacc.utexas.edu</a></td>
 			<td>
-				Data Mining &amp; Statistics</td>
+				Scalable Computational Intelligence</td>
 		</tr>
 		<tr>
 			<td>
