RT-20572: Archive Star Scholars
And fix its spelling. And make SPICE bigger.

--- a/web-content/root/education/stem-programs--content.html
+++ b/web-content/root/education/stem-programs--content.html
@@ -113,14 +113,19 @@
 			</div>
 			<div class="col-md-6">
 				<div class="row">
+					<!-- RT-20572: Archived, ETA unknown (since 2021-10-13) -->
+					<!--
 					<div class="col-md-6">
-						<img alt="Stars Scholars Program" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/star.png" style="" />
+						<img alt="Star Scholars Program" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/star.png" style="" />
 						<h5 style="margin-bottom:0px;">
 							<a href="https://www.tacc.utexas.edu/partnerships/star/scholars" target="_blank"> Stars Scholars Program</a></h5>
 						<p style="margin-top:2px;">
 							Academic year-long research opportunities for UT students</p>
 					</div>
 					<div class="col-md-6">
+					-->
+					<!-- RT-20572: Enlarged, since archive of Star Scholars -->
+					<div class="col-md-12">
 						<img alt="SPICE - Supporting Pacific Indigenous Computing Excellence" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/spice-header.png" style="" />
 						<h5 style="margin-bottom:0px;">
 							<a href="https://www.tacc.utexas.edu/partnerships/spice" target="_blank"> Supporting Pacific Indigenous Computing Excellence (SPICE)</a></h5>
