RT-20324: Add Damian Hopkins

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -153,7 +153,7 @@
 			<td>
 				<a href="mailto:wbomar@tacc.utexas.edu">wbomar@tacc.utexas.edu</a></td>
 			<td>
-				Communications, Media, and Design</td>
+				Communications, Media, &amp; Design</td>
 		</tr>
 		<tr>
 			<td>
@@ -682,6 +682,14 @@
 				<a href="mailto:eho@tacc.utexas.edu">eho@tacc.utexas.edu</a></td>
 			<td>
 				Life Sciences Computing</td>
+		</tr>
+		<tr>
+			<td>
+				<a href="/web/website/about/directory/damian-hopkins">Hopkins, Damian</a></td>
+			<td>
+				<a href="mailto:dhopkins@tacc.utexas.edu">dhopkins@tacc.utexas.edu</a></td>
+			<td>
+				Communications, Media, &amp; Design</td>
 		</tr>
 		<tr>
 			<td>
