RT- 20676: EPIC: Tables: Rebuild Publications
- drop "Link" column
- un-indent
- use APA formatting

--- a/web-content/root/education/EPIC/Research/publications.html
+++ b/web-content/root/education/EPIC/Research/publications.html
@@ -1,87 +1,54 @@
-    <h3>
-        Publications</h3>
-    <table class="weteachcs-table">
-        <thead>
-            <tr>
-                <th class="weteachcs-table__cite">
-                    Citation</th>
-                <th class="weteachcs-table__link">
-                    Link</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td class="weteachcs-table__cite">
-                    Sexton, S., Ryoo, J., Garbrecht, L., &amp; Fall, R. (2020, September 16). Dimensions of equity in RPPs - A framework to guide partnership discussions. &quot;National Network of Education Research-Practice Partnerships (NNERPP) Extra,&quot; 2(3), 12-18.</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/shared/static/lxly7ejf1u2amg4bjzqnyl7j7knjue7a.pdf" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__cite">
-                    Fletcher, C.L. and Warner, J. R., (2020). Summary of the CAPE Framework for Assessing Equity in Computer Science Education. Retrieved from https:&#x2F;&#x2F;www.tacc.utexas.edu&#x2F;epic&#x2F;research.</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/t0d8mugfd8qvaxwk0uoeaqlxf65bdlrb" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__cite">
-                    Osman, D. J., &amp; Warner, J. R. (2020). Measuring teacher motivation: The missing link between professional development and practice. &quot;Teaching and Teacher Education, 92&quot;, 103064.</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://www.sciencedirect.com/science/article/abs/pii/S0742051X1830670X" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__cite">
-                    Torbey, R., Martin, N.D., Warner, J.R, Fletcher, C.L. (2020). &quot;Algebra I Before High School as a Gatekeeper to Computer Science Participation&quot;. SIGCSE ‘20 Proceedings of the 51st ACM Technical Symposium on Computer Science Education.</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/fe32v1sq8vexx480d8vmqgg1xv2h79dr" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__cite">
-                    Warner, J. R., Fletcher, C. L., Torbey, R., Garbrecht, L. S. (2019). Increasing capacity for computer science education in rural areas through a large-scale collective impact model. In &quot;Proceedings of the 50th ACM Technical Symposium on Computer Science Education SIGCSE ’19&quot;, 1157-1163. ACM. https:&#x2F;&#x2F;doi.org&#x2F;10.1145&#x2F;3287324.3287418</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/jgbvgkhp8xxew5tid01ka137hy2r4oog" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__cite">
-                    Fletcher, C.L. &amp; Ramchand, R. (2018). &quot;Preparing Texas Students for the Cyber Economy&quot;. Austin, TX: The University of Texas at Austin. Retrieved from https:&#x2F;&#x2F;www.tacc.utexas.edu&#x2F;epic&#x2F;research&#x2F;presentations-and-publications</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/d2nal1mh7amk9g6hfl99f4suui5niubi" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__cite">
-                    Warner, J. R., Fletcher, C. L., Monroe, W., &amp; Garbrecht, L. S. (2018). Growing the High School CS Teacher Workforce: Predictors of Success in Achieving CS Certification [Poster]. In &quot;Proceedings of the 49th ACM Technical Symposium on Computer Science Education&quot;. ACM https:&#x2F;&#x2F;doi.org&#x2F;10.1145&#x2F;3159450.3162278</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/ao56begyr0e7b1vaabyngi4dccy1kok3" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__cite">
-                    Warner, J. R., Junk, D. L., Osman, D. J., Schallert, D. L., &amp; Gámez, C. (2016, April). &quot;Creative construction or spotty uptake?: Propagating a professional development from trainer to facilitator to teacher&quot; [Paper presentation]. American Educational Research Association Annual Meeting, Washington, D.C.</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/x42l5yd4ihmloonm5130sy5x3b1qqf6n" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__cite">
-                    Adrion, W.R., Dunton, S., Ericson, B., Fall, R., Fletcher, C., Guzdial, M. (2020, December) U.S. States Must Broaden Participation While Expanding Access to Computer Science Education. Communications of the ACM, 63(12), 22-25, doi:10.1145&#x2F;3430375</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/mr4kfucsgaonoav6dyl9r8v6qkj0zk2r" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__cite">
-                    Cuny, J. E., Payton, J., Gates, A., Fletcher, C. L., &amp; Peterfreund, A. (2020). National CS Ed Equity-Focused Consortia and Their Value to the Community. Proceedings of the 51st ACM Technical Symposium on Computer Science Education, Portland, OR, USA. https:&#x2F;&#x2F;doi.org&#x2F;10.1145&#x2F;3328778.3366982</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/uqapl25bugcexr9kvj4ls84fvh7zz9ni" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__cite">
-                    Fletcher, C.L., Torbey, R., Childs, J., Zarch, R. (2020) &quot;Reflections on Launching a Networked Improvement Community with Computer Science Educators&quot;. Paper presented at RESPECT , Portland, OR, USA. http:&#x2F;&#x2F;respect2020.stcbp.org&#x2F;digital-proceedings&#x2F;</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/xj3f689af5dc5rq7emgft3w6pwcbf67k" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__cite">
-                    Odom-Bartel, R., Fletcher, C., Owen, J., Gray, J., &amp; Zelkowski, J. (February, 2020). &quot;Preparing Pre-Service Teacher Candidates for the Praxis Exam: An Innovative Model of Blended Support&quot;. SIGCSE’20: Proceedings of the 51st ACM Technical Symposium on Computer Science Education, pp 1298. https:&#x2F;&#x2F;doi.org&#x2F;10.1145&#x2F;3328778.3372654</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/7fa1xoniqos8nxyueumo1trhl5d8qnrn" target="_blank" >View</a></td>
-            </tr>
-        </tbody>
-    </table>
-    
+<h3>
+	Publications</h3>
+<table class="weteachcs-table">
+	<tbody>
+		<tr>
+			<td class="weteachcs-table__cite">
+				Sexton, S., Ryoo, J., Garbrecht, L., &amp; Fall, R. (2020, September 16). <em>Dimensions of equity in RPPs - A framework to guide partnership discussions.</em> "National Network of Education Research-Practice Partnerships (NNERPP) Extra," 2(3), 12-18.</td>
+		</tr>
+		<tr>
+			<td class="weteachcs-table__cite">
+				Fletcher, C.L. and Warner, J. R., (2020). <em>Summary of the CAPE Framework for Assessing Equity in Computer Science Education.</em> Retrieved from <a href="https://www.tacc.utexas.edu/epic/research">https://www.tacc.utexas.edu/epic/research</a>.</td>
+		</tr>
+		<tr>
+			<td class="weteachcs-table__cite">
+				Osman, D. J., &amp; Warner, J. R. (2020). <em>Measuring teacher motivation: The missing link between professional development and practice.</em> "Teaching and Teacher Education, 92", 103064.</td>
+		</tr>
+		<tr>
+			<td class="weteachcs-table__cite">
+				Torbey, R., Martin, N.D., Warner, J.R, Fletcher, C.L. (2020). "Algebra I Before High School as a Gatekeeper to Computer Science Participation". SIGCSE ‘20 Proceedings of the 51st ACM Technical Symposium on Computer Science Education.</td>
+		</tr>
+		<tr>
+			<td class="weteachcs-table__cite">
+				Warner, J. R., Fletcher, C. L., Torbey, R., Garbrecht, L. S. (2019). Increasing capacity for computer science education in rural areas through a large-scale collective impact model. In "Proceedings of the 50th ACM Technical Symposium on Computer Science Education SIGCSE '19", 1157-1163. ACM. <a href="https://doi.org/10.1145/3287324.3287418" target="_blank">https://doi.org/10.1145/3287324.3287418</a></td>
+		</tr>
+		<tr>
+			<td class="weteachcs-table__cite">
+				Fletcher, C.L. &amp; Ramchand, R. (2018). "Preparing Texas Students for the Cyber Economy". Austin, TX: The University of Texas at Austin. Retrieved from <a href="https://www.tacc.utexas.edu/epic/research/presentations-and-publications">https://www.tacc.utexas.edu/epic/research/presentations-and-publications</a></td>
+		</tr>
+		<tr>
+			<td class="weteachcs-table__cite">
+				Warner, J. R., Fletcher, C. L., Monroe, W., &amp; Garbrecht, L. S. (2018). <em>Growing the High School CS Teacher Workforce: Predictors of Success in Achieving CS Certification [Poster].</em> In "Proceedings of the 49th ACM Technical Symposium on Computer Science Education". ACM <a href="https://doi.org/10.1145/3159450.3162278" target="_blank">https://doi.org/10.1145/3159450.3162278</a></td>
+		</tr>
+		<tr>
+			<td class="weteachcs-table__cite">
+				Warner, J. R., Junk, D. L., Osman, D. J., Schallert, D. L., &amp; Gámez, C. (2016, April). "Creative construction or spotty uptake?: Propagating a professional development from trainer to facilitator to teacher" [Paper presentation]. American Educational Research Association Annual Meeting, Washington, D.C.</td>
+		</tr>
+		<tr>
+			<td class="weteachcs-table__cite">
+				Adrion, W.R., Dunton, S., Ericson, B., Fall, R., Fletcher, C., Guzdial, M. (2020, December). <em>U.S. States Must Broaden Participation While Expanding Access to Computer Science Education. Communications of the ACM</em>, 63(12), 22-25, <a href="https://doi.org/10.1145/3430375" target="_blank">https://doi.org/10.1145/3430375</a></td>
+		</tr>
+		<tr>
+			<td class="weteachcs-table__cite">
+				Cuny, J. E., Payton, J., Gates, A., Fletcher, C. L., &amp; Peterfreund, A. (2020). <em>National CS Ed Equity-Focused Consortia and Their Value to the Community. Proceedings of the 51st ACM Technical Symposium on Computer Science Education</em>, Portland, OR, USA. <a href="https://doi.org/10.1145/3328778.3366982" target="_blank">https://doi.org/10.1145/3328778.3366982</a></td>
+		</tr>
+		<tr>
+			<td class="weteachcs-table__cite">
+				Fletcher, C.L., Torbey, R., Childs, J., Zarch, R. (2020) "Reflections on Launching a Networked Improvement Community with Computer Science Educators". Paper presented at RESPECT , Portland, OR, USA. <a href="http://respect2020.stcbp.org/digital-proceedings/" target="_blank">http://respect2020.stcbp.org/digital-proceedings/</a></td>
+		</tr>
+		<tr>
+			<td class="weteachcs-table__cite">
+				Odom-Bartel, R., Fletcher, C., Owen, J., Gray, J., &amp; Zelkowski, J. (February, 2020). "Preparing Pre-Service Teacher Candidates for the Praxis Exam: An Innovative Model of Blended Support". SIGCSE'20: Proceedings of the 51st ACM Technical Symposium on Computer Science Education, pp 1298. <a href="https://doi.org/10.1145/3328778.3372654" target="_blank">https://doi.org/10.1145/3328778.3372654</a></td>
+		</tr>
+	</tbody>
+</table>
