--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -15,3 +15,24 @@
 			November 14th – 19th</p>
 	</div>
 </div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://www.designsafe-ci.org/learning-center/training/webinars/ds/2021/hvsr-ambient-noise-earthquake-engineering" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1694621/designsafe-events.jpg" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://www.designsafe-ci.org/learning-center/training/webinars/ds/2021/hvsr-ambient-noise-earthquake-engineering" target="_blank">Horizontal-to-Vertical Spectral Ratios (HVSR) of Ambient Noise for Earthquake Engineering</a><br />
+			November 17th<span>&nbsp; |&nbsp;
+			1:00PM – 2:00PM CT</span></p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://www.designsafe-ci.org/learning-center/training/workshops/fiu-ef/2021-wow-ef-user-workshop" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1694621/designsafe-events.jpg" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://www.designsafe-ci.org/learning-center/training/workshops/fiu-ef/2021-wow-ef-user-workshop" target="_blank">2021 NSF NHERI Wall of Wind Experimental Facility User Workshop</a><br />
+			December 2nd – 3rd<span>&nbsp; |&nbsp;
+			9:00AM – 5:00PM ET</span>&nbsp; |&nbsp;
+			Miami, FL</p>
+	</div>
+</div>
